add responsive style for card

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ html{
 
 header{
     background-color: rgba(229, 84, 115, 0.2);
-    height: 850px;
+    height: auto;
     padding: 0 140px;
     box-sizing: border-box;
 }
@@ -61,4 +61,51 @@ header{
     padding-top: 50px;
     align-items: center;
     justify-content: space-between;
+}
+.featu-f{
+    font-weight: 800;
+    font-size: 2.5rem;
+}
+.test{
+    width: 100%;
+    margin-top: 24px;
+    display: flex;
+    justify-content: center; 
+}
+.featu-p{
+    width: 45%;
+}
+.main-con{
+    margin-top: 150px;
+    padding: 0 140px;
+    text-align: center;
+}
+.card-con{
+    margin-top: 48px;
+    justify-content: space-between;
+}
+.card{
+    width: 464px;
+    height: 605px;
+}
+.cardi{
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.card-1{
+    background: rgba(167, 33, 98, 0.15);
+}
+.card-2{
+    background: rgba(5, 151, 160, 0.15)
+}
+.card-3{
+    background: rgba(71, 125, 17, 0.15)
+}
+.pink{
+    margin-top: 32px;
+    font-size: 1.5rem;
+    color: rgb(39, 39, 39);
 }
