--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -3,7 +3,7 @@
         font-size: 8px;
     }
     header, .main-con{
-        padding: 0 40px;
+        padding: 0 30px;
     }
     .flower-head{
         flex-direction: column;
@@ -21,6 +21,9 @@
     }
     .card-con{
         flex-direction: column;
+    }
+    .card{
+        width: 364px;
     }
     .featu-p{
         width: 80%;
